[gd_scene load_steps=2 format=3 uid="uid://btj01t6tvv5mo"]

[ext_resource type="Script" path="res://UIs/main_ui.gd" id="1_yuonv"]

[node name="MainUI" type="CanvasLayer"]
script = ExtResource("1_yuonv")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -1.0
offset_top = 1.0
offset_right = 1151.0
offset_bottom = 1153.0

[node name="ScoreLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -158.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 25
text = "Balance: $0"

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.993
anchor_top = 0.077
anchor_right = 0.993
anchor_bottom = 0.077
offset_left = -148.936
offset_top = -51.704
offset_right = 0.0639648
offset_bottom = 0.29599
grow_horizontal = 0
grow_vertical = 2
text = "Press q for quiz
Press b for buy"

[node name="RoundLabel" type="Label" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.24
anchor_right = 0.5
anchor_bottom = 0.305
offset_left = -104.0
offset_top = -0.480011
offset_right = 112.0
offset_bottom = 3.63998
grow_horizontal = 2
theme_override_font_sizes/font_size = 55
text = "ROUND "

[node name="HealthBar" type="ProgressBar" parent="Control"]
modulate = Color(0, 1, 0.180392, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -114.0
offset_right = 145.0
offset_bottom = -87.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
value = 1.0

[node name="RoundTimer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="RoundLabelVisibilityTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="RoundTimer" to="." method="_on_round_timer_timeout"]
[connection signal="timeout" from="RoundLabelVisibilityTimer" to="." method="_on_round_label_visibility_timer_timeout"]
